--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "0002e35e-4a6a-41c8-a2f5-6940c7e5949f"
 authors = ["Mathieu Besançon <mathieu.besancon@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+GraphsFlows = "06909019-6f44-4949-96fc-b9d9aaa02889"
+GraphsMatching = "c3af3a8c-b79e-4b01-bf44-c718d7e0e0d6"
+MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
+
 [compat]
 julia = "1"
 
