--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,10 @@ GraphsMatching = "c3af3a8c-b79e-4b01-bf44-c718d7e0e0d6"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 
 [compat]
+Graphs = "1"
+GraphsFlows = "0.1"
+GraphsMatching = "0.2"
+MathOptInterface = "1"
 julia = "1"
 
 [extras]
