--- a/Project.toml
+++ b/Project.toml
@@ -4,14 +4,15 @@ authors = ["ZIB-IOL and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+FrankWolfe = "f55ce6ea-fdc5-4628-88c5-0087fe54bd30"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 GraphsFlows = "06909019-6f44-4949-96fc-b9d9aaa02889"
 GraphsMatching = "c3af3a8c-b79e-4b01-bf44-c718d7e0e0d6"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
-FrankWolfe = "f55ce6ea-fdc5-4628-88c5-0087fe54bd30"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
+FrankWolfe = "0.3"
 Graphs = "1"
 GraphsFlows = "0.1"
 GraphsMatching = "0.2"
