--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
           - version: '1'
             os: ubuntu-latest
             arch: x64
-          - version: 'lts'
+          - version: '1.6'
             os: ubuntu-latest
             arch: x64
           - version: '1'
