--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CombinatorialLinearOracles"
 uuid = "0002e35e-4a6a-41c8-a2f5-6940c7e5949f"
 authors = ["ZIB-IOL and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [deps]
 FrankWolfe = "f55ce6ea-fdc5-4628-88c5-0087fe54bd30"
